--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p><em>A red hair <strong><a href="https://dogtime.com/dog-breeds/cairn-terrier#/slide/1">Cairn Terrier</a></strong></em></p>
         <br>
         <p>Richard is a 2-year-old Cairn Terrier. He is in red and has a quite active personality.</p>
-        <p>His mommy is Icy&#128105; and daddy is Tim&#129492;</p>
+        <p>His mommy is Icy&#128105; and daddy is Timmy&#129492;</p>
       </td>
     </tr>
   </table>
